--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,34 @@ jobs:
         run: python pyconnx/test.py
 
   build_and_test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@master
+      - name: Setup python
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.8
+      - name: Install ubuntu packages to build
+        run: |
+          sudo apt install cmake ninja-build protobuf-compiler
+          pip3 install poetry
+          poetry config virtualenvs.create false
+          poetry install --no-interaction --no-ansi -E numpy
+      - name: Create build directory
+        run: mkdir build
+      - name: build C files
+        working-directory: build
+        run: |
+            cmake -G Ninja ../ports/linux/ -DCMAKE_BUILD_TYPE=Debug
+            ninja
+      - name: MNIST
+        working-directory: build
+        run: |
+            ninja mnist
+
+  onnx_tests:
+    needs: build_and_test
     strategy:
       fail-fast: false
       matrix:
@@ -42,29 +70,6 @@ jobs:
           - latest
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@master
-      - name: Setup python
-        uses: actions/setup-python@v3
-        with:
-          python-version: 3.8
-      - name: Install ubuntu packages to build
-        run: |
-            sudo apt install cmake ninja-build protobuf-compiler
-            pip3 install poetry
-            poetry config virtualenvs.create false
-            poetry install --no-interaction --no-ansi -E numpy
-      - name: Create build directory
-        run: mkdir build
-      - name: build C files
-        working-directory: build
-        run: |
-            cmake -G Ninja ../ports/linux/ -DCMAKE_BUILD_TYPE=Debug
-            ninja
-      - name: MNIST
-        working-directory: build
-        run: |
-            ninja mnist
       - name: Clone onnx-connx
         uses: actions/checkout@master
         with:
@@ -75,10 +80,12 @@ jobs:
             ONNX_VERSION: ${{ matrix.onnx_version }}
         run: |
           cd onnx-connx
-          cp ../build/connx ./onnx_connx/connx
           [[ "$ONNX_VERSION" = "latest" ]] && ONNX_VERSION='' || ONNX_VERSION="==$ONNX_VERSION"
-          pip3 install -U "onnx${ONNX_VERSION}" protobuf tabulate pytest
-          pytest -v
+          pip3 install poetry
+          poetry config virtualenvs.create false
+          poetry install --no-interaction --no-ansi
+          poetry add ../ -E numpy && poetry install
+          poetry run pytest -v
 
   build_on_rpi:
     strategy:
